--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-cleanup==9.0.0
 django-cors-headers==4.6.0
 django-environ==0.12.0
 django-filter==24.3
+django-jazzmin==3.0.1
 djangorestframework==3.15.2
 drf-spectacular==0.28.0
 drf-standardized-errors==0.14.1
